--- a/docs/README
+++ b/docs/README
@@ -14,6 +14,7 @@ The ONIE source code is laid out as follows::
   │   ├── conf
   │   ├── make
   │   └── scripts
+  ├── demo
   ├── docs
   ├── machine
   ├── patches
@@ -32,6 +33,7 @@ build-config          Builds are launched from this directory.  The main Makefil
 build-config/conf     Contains configuration common to all platforms.
 build-config/make     Contains makefile fragments included by the main Makefile.
 build-config/scripts  Scripts used by the build process.
+demo                  A sample ONIE compliant installer and OS.  See README.demo for details.
 docs                  What you are reading now.
 machine               Contains platform specific machine definition files.  More on that below.
 patches               Patch sets applied to upstream projects, common to all platforms.
