Updated basic project READMEs

--- a/docs/README
+++ b/docs/README
@@ -13,3 +13,13 @@ system::
 
   apt-get install python-sphinx rst2pdf
 
+Building Documentation
+======================
+
+Do the following to build the documentation::
+
+  $ cd onie/build-config
+  $ make html
+
+The documentation is available in ``onie/build/html``.
+
