--- a/machine/fsl_p2020rdbpca/INSTALL
+++ b/machine/fsl_p2020rdbpca/INSTALL
@@ -16,7 +16,7 @@ type ``"make MACHINE=fsl_p2020rdbpca all"``.  For example::
 When complete, the ONIE binaries are located in
 ``build/images``::
 
-  -rw-r--r-- 4849664 May  7 12:06 onie-fsl_p2020rdbpca.bin
+  -rw-r--r-- 4849664 May  7 12:06 onie-fsl_p2020rdbpca-r0.bin
 
 Installing the ONIE binaries
 ============================
@@ -24,7 +24,7 @@ Installing the ONIE binaries
 A single binary image needs to be installed on the NOR flash.
 
 Image 1 -- ONIE kernel and u-boot.
-  name:  onie-fsl_p2020rdbpca.bin
+  name:  onie-fsl_p2020rdbpca-r0.bin
 
 Step 1 -- Put the ONIE file on a TFTP server
 ---------------------------------------------
@@ -32,14 +32,14 @@ Step 1 -- Put the ONIE file on a TFTP server
 The following directions assume the files are on the root of the TFTP
 server.
 
-Step 2 -- Install image1 (onie-fsl_p2020rdbpca.bin)
+Step 2 -- Install image1 (onie-fsl_p2020rdbpca-r0.bin)
 -----------------------------------------------
 
 Copying the image down using TFTP and flash to the NOR flash::
 
   => setenv start 0xefb60000
   => setenv sz.b 0x4a0000
-  => tftp onie-fsl_p2020rdbpca.bin
+  => tftp onie-fsl_p2020rdbpca-r0.bin
   => protect off $start +${sz.b} && erase $start +${sz.b}
   => cp.b $fileaddr $start ${sz.b} && protect on $start +${sz.b}
 
