--- a/demo/os/install
+++ b/demo/os/install
@@ -1,7 +1,10 @@
 #!/bin/bash
 
-rootfs=$1
+srcfs=$1
+rootfs=$2
 
+[ -n "$srcfs" ]  || (echo "Error: need to specify a source fs" && exit -1)
+[ -d "$srcfs" ]  || (echo "Error: source fs \"${srcfs}\" does not exist" && exit -1)
 [ -n "$rootfs" ]  || (echo "Error: need to specify a rootfs" && exit -1)
 [ -d "$rootfs" ]  || (echo "Error: rootfs \"${rootfs}\" does not exist" && exit -1)
 [ "$rootfs" != "/" ] || (echo "Error: will not modify \"${rootfs}\"" && exit -1)
@@ -16,5 +19,5 @@ ROOTFS="$(realpath ${rootfs})" && echo "Installing in ${ROOTFS}"
 [ ${UID} == 0 ] || (echo "Error: must be root to run ${0}" && exit -1)
 
 TAR_OPTS="--exclude=*~ --exclude-backups --owner=root --group=root"
-echo "Copying default rootfs into target rootfs"
-tar --directory=default $TAR_OPTS  -cf - . | ( cd $ROOTFS; tar -xpf - )
+echo "Copying $srcfs rootfs into target rootfs"
+tar --directory=$srcfs $TAR_OPTS  -cf - . | ( cd $ROOTFS; tar -xpf - )
