x86 demo OS: ONIE interface implementation
To demonstrate how a NOS communicates with ONIE via the ONIE-CONFIG
partition the demo OS implements a number of CLIs:

install   -- boot ONIE in installer mode
rescue    -- boot ONIE in rescue mode
uninstall -- boot ONIE in OS uninstall mode
update    -- boot ONIE in self update mode

The implementation here highlights how an NOS would:

1. setup the onie-tools
2. use the onie-tools to change the boot order

Reviewed-By: dustin

--- a/demo/os/x86_64/bin/install
+++ b/demo/os/x86_64/bin/install
@@ -2,5 +2,7 @@
 
 echo "Rebooting into ONIE (re)install mode..."
 
-echo "Not Implemented"
-exit 1
+mount-onie
+/mnt/onie-tools/bin/onie-boot-default -q -o install
+/mnt/onie-tools/bin/onie-boot-update -q
+reboot
