Add support for Intel Centerton CPUs
Back port kernel drivers from linux-stable for the Intel Centerton
CPU:

- GPIO controller
- ISMT SMBus 2.0 controller
- MFD/LPC (multifunction driver/low pin count)

--- a/patches/kernel/README
+++ b/patches/kernel/README
@@ -13,5 +13,6 @@ Prefix         Meaning
 =============+===========
 git-           Specific to git, e.g. the standard gitignore.patch.
 kernel-        Kernel features, like file systems, back ported items.
-driver-        Device drivers.  Not tied to a specific platform.
 arch-powerpc-  PowerPC CPU patches.  Not tied to a specific platform.
+arch-intel-    Intel CPU patches.  Not tied to a specific platform.
+driver-        Device drivers.  Not tied to a specific platform.
