Package name change.

--- a/components/all/vendor-config/onl/deb/debuild/debian/changelog
+++ b/components/all/vendor-config/onl/deb/debuild/debian/changelog
@@ -1,4 +1,4 @@
-vendor-config-xonl (0.1.0bsn1~ubuntu1) UNRELEASED; urgency=low
+vendor-config-onl (0.1.0bsn1~ubuntu1) UNRELEASED; urgency=low
 
   * Initial release.
 
