demo OS updates to support GPT/MSDOS and new disk layout
Reviewed by: TBD

This patch adds support to the demo OS installer and demo OS runtime
for the new gpt/msdos disk label support and new disk layout.

The demo OS installer and runtime exercise a number of interfaces for
interacting with ONIE.

Demo OS Installer
================

The demo OS installer uses 'onie-sysinfo -t' to determine the disk
label type.  With this information the installer can create partitions
in an appropriate way.

The demo OS installer is updated to act like a traditional Linux OS
and install its version of GRUB in the MBR of the primary hard disk.
Along with that it synthesizes its own grub.cfg, including a menu
entry for chainloading ONIE.

During installation the demo OS installer uses the ONIE provided
/mnt/onie-boot/onie/grub.d/50_onie_grub script to generate a GRUB menu
entry for chainloading ONIE.  Any NOS can use a similar technique by
adding the 50_onie_grub script into its /etc/grub.d/ directory.

Demo OS Runtime
===============

The runtime interfaces for interacting with ONIE are:

- demo OS mounts the ONIE-BOOT partition on /mnt/onie-boot.  This
  gives the demo OS access to:

  + /mnt/onie-boot/onie/grub.d/50_onie_grub -- configuration script
    demo OS could place in its own /etc/grub.d.

  + /mnt/onie-boot/onie/tools/bin/onie-boot-mode -- CLI command demo
    OS uses to select the "boot mode" for the next time ONIE boots.
    One of: install, uninstall, rescue, update or embed.

- demo OS scripts for automatically rebooting into ONIE:

  + /bin/install   -- reboot into ONIE 'install' mode.
  + /bin/uninstall -- reboot into ONIE 'uninstall' mode.
  + /bin/rescue    -- reboot into ONIE 'rescue' mode.
  + /bin/update    -- reboot into ONIE 'update' mode.
  + /bin/embed     -- reboot into ONIE 'embed mode.

Testing Done:

All of the following tests were run using two physical x86 systems
(the im_n29xx_t40n machine being one of them) and the virtual
kvm_x86_64 machine.  For 

--- a/demo/os/x86_64/bin/install
+++ b/demo/os/x86_64/bin/install
@@ -2,7 +2,6 @@
 
 echo "Rebooting into ONIE (re)install mode..."
 
-mount-onie
-/mnt/onie-tools/bin/onie-boot-default -q -o install
-/mnt/onie-tools/bin/onie-boot-update -q
+grub-reboot ONIE
+/mnt/onie-boot/onie/tools/bin/onie-boot-mode -q -o install
 reboot
