DELL S6000-ON: Update INSTALL instructions
This patch updates the INSTALL instructions for the DELL S6000-ON platform.

===============================================================================
Installing ONIE on DELL S6000 Series w/ Intel Atom Centerton (S1220) CPU Module
================================================================================

Cross-Compiling ONIE
====================

To compile ONIE first change directories to ``build-config`` and then
type ``"make -j12 MACHINEROOT=../machine/dell MACHINE=dell_s6000_s1220 all"``.

  For example::

  $ cd build-config
  $ make -j12 MACHINEROOT=../machine/dell MACHINE=dell_s6000_s1220 all

When complete, the ONIE binaries are located in
``build/images``::

  -rw-r--r-- 10487413 Mar 27 11:01 onie-updater-x86_64-dell_s6000_s1220-r0
  -rw-r--r-- 24620032 Mar 27 11:01 onie-recovery-x86_64-dell_s6000_s1220-r0.efi64.pxe
  -rw-r--r-- 22020096 Mar 27 11:01 onie-recovery-x86_64-dell_s6000_s1220-r0.iso

It builds image for update via ONIE,image for boot via pxe and image for booting via USB.

Complete installation details, refer to machine/dell/dell_s6000_s1220/INSTALL.

--- a/machine/dell/dell_s6000_s1220/INSTALL
+++ b/machine/dell/dell_s6000_s1220/INSTALL
@@ -6,10 +6,11 @@ Cross-Compiling ONIE
 ====================
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINE=dell_s6000_s1220 all"``.  For example::
+type ``"make -j12 MACHINEROOT=../machine/dell MACHINE=dell_s6000_s1220 all"``.
+For example::
 
   $ cd build-config
-  $ make -j4 MACHINE=dell_s6000_s1220 all
+  $ make -j12 MACHINEROOT=../machine/dell MACHINE=dell_s6000_s1220 all
 
 When complete, the ONIE binaries are located in
 ``build/images``::
@@ -24,10 +25,11 @@ Cross-Compiling the DEMO OS
 ===========================
 
 To compile the demo OS first change directories to ``build-config``
-and then type ``"make MACHINE=dell_s6000_s1220 demo"``.  For example::
+and then type ``"make -j12 MACHINEROOT=../machine/dell MACHINE=dell_s6000_s1220 demo"``.
+For example::
 
   $ cd build-config
-  $ make -j4 MACHINE=dell_s6000_s1220 demo
+  $ make -j12 MACHINEROOT=../machine/dell MACHINE=dell_s6000_s1220 demo
 
 When complete, the demo OS installer is located in ``build/images``::
 
