Accton AS4600_54T: Remove 'accton_' prefix from the machine name
To compatible with current NOS installer, keep the machine name as
the old one.

--- a/machine/accton/as4600_54t/INSTALL
+++ b/machine/accton/as4600_54t/INSTALL
@@ -8,16 +8,16 @@ Cross-Compiling ONIE
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/accton MACHINE=accton_as4600_54t all"``.
+type ``"make MACHINEROOT=../machine/accton MACHINE=as4600_54t all"``.
 For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/accton MACHINE=accton_as4600_54t all
+  $ make -j4 MACHINEROOT=../machine/accton MACHINE=as4600_54t all
 
 When complete, the ONIE binaries are located in
 ``build/images``::
 
-  -rw-r--r-- 3604480 May  7 11:38 onie-accton_as4600_54t-r0.bin
+  -rw-r--r-- 3604480 May  7 11:38 onie-as4600_54t-r0.bin
 
 Installing the ONIE binaries
 ============================
@@ -28,14 +28,14 @@ Step 1 -- Put the ONIE files on a TFTP server
 The following directions assume the files are on the root of the TFTP
 server.
 
-Step 2 -- Install ONIE kernel (onie-accton_as4600_54t-r0.bin)
+Step 2 -- Install ONIE kernel (onie-as4600_54t-r0.bin)
 -----------------------------------------------
 
 Copying the image down using TFTP and flash to the NOR flash::
 
   => setenv q1start 0xefb60000
   => setenv q1sz.b 0x400000
-  => tftp onie-accton_as4600_54t-r0.bin
+  => tftp onie-as4600_54t-r0.bin
   => protect off $q1start +${q1sz.b} && erase $q1start +${q1sz.b}
   => cp.b $fileaddr $q1start ${q1sz.b} && protect on $q1start +${q1sz.b}
 
