Updated ONLP and ONLP-quanta to HEAD
* Updated ONLP package versions
* Added ONLP to onlp-powerpc-quanta-lb9-r0/Makefile depends

--- a/components/powerpc/onlp/onlp-powerpc-quanta-ly2-r0/deb/debuild/debian/changelog
+++ b/components/powerpc/onlp/onlp-powerpc-quanta-ly2-r0/deb/debuild/debian/changelog
@@ -1,3 +1,8 @@
+onlp-powerpc-quanta-ly2-r0 (0.2.0bsn1~ubuntu1) UNRELEASED; urgency=low
+
+  * Updates to newest version of ONLP quanta drivers.  Fixed SFP issue.
+
+ -- Support <support@bigswitch.com>  Thu, 05 Jun 2014 13:21:30 -0700
 onlp-powerpc-quanta-ly2-r0 (0.1.0bsn1~ubuntu1) UNRELEASED; urgency=low
 
   * Initial release.
