--- a/components/any/onlp/onlp-platform/deb/debuild/debian/changelog
+++ b/components/any/onlp/onlp-platform/deb/debuild/debian/changelog
@@ -1,3 +1,9 @@
+onlp-platform (0.2.0bsn1~ubuntu1) unstable; urgency=low
+
+  * Updated ONLP SFP API
+
+ -- ONL <opennetworklinux@googlegroups.com>  Tue, 04 Nov 2014 21:55:08 -0800
+
 onlp-platform (0.1.0bsn1~ubuntu1) UNRELEASED; urgency=low
 
   * Initial release.
