--- a/components/any/onlp/onlp/deb/debuild/debian/changelog
+++ b/components/any/onlp/onlp/deb/debuild/debian/changelog
@@ -1,7 +1,11 @@
-onlp (0.1.0bsn1~ubuntu1) UNRELEASED; urgency=low
+onlp (0.2.0bsn1~ubuntu1) unstable; urgency=low
+
+  * Updated ONLP SFP API
+
+ -- ONL <opennetworklinux@googlegroups.com>  Tue, 04 Nov 2014 21:55:08 -0800
+onlp (0.1.0bsn1~ubuntu1) unstable; urgency=low
 
   * Initial release.
+  * more magic
 
- -- Support <support@bigswitch.com>  Wed, 02 Apr 2014 10:36:43 -0700
-
-
+ -- Support <support@bigswitch.com>  Tue, 04 Nov 2014 21:55:08 -0800
