Accton AS7700_32X: revise INSTALL to meet current design

--- a/machine/accton/accton_as7700_32x/INSTALL
+++ b/machine/accton/accton_as7700_32x/INSTALL
@@ -17,8 +17,8 @@ For example::
 When complete, the ONIE binaries are located in
 ``build/images``::
 
-  -rw-r--r-- 3604480 May  7 11:38 onie-accton_as7700_32x-r0.bin
-  -rw-r--r--  524288 May  7 11:38 onie-accton_as7700_32x-r0.bin.uboot
+  -rw-r--r-- 3604480 May  7 11:38 onie-accton_as7700_32x-r1.bin
+  -rw-r--r--  524288 May  7 11:38 onie-accton_as7700_32x-r1.bin.uboot
 
 Installing the ONIE binaries
 ============================
@@ -28,10 +28,10 @@ NOR flash.  Two images are required as a board info block resides in the
 NOR flash between U-Boot and the U-Boot environment variables::
 
   Image 1 -- ONIE kernel and empty U-Boot envariables
-    name:  onie-accton_as7700_32x-r0.bin
+    name:  onie-accton_as7700_32x-r1.bin
 
   Image 2 -- U-Boot binary
-    name:  onie-accton_as7700_32x-r0.bin.uboot
+    name:  onie-accton_as7700_32x-r1.bin.uboot
 
 Step 1 -- Put the ONIE files on a TFTP server
 ---------------------------------------------
@@ -39,25 +39,25 @@ Step 1 -- Put the ONIE files on a TFTP server
 The following directions assume the files are on the root of the TFTP
 server.
 
-Step 2 -- Install image1 (onie-accton_as7700_32x-r0.bin)
+Step 2 -- Install image1 (onie-accton_as7700_32x-r1.bin)
 --------------------------------------------------------
 
 Copying the image down using TFTP and flash to the NOR flash::
 
   => setenv q1start 0xe8040000
-  => setenv q1sz.b 0xd00000
-  => tftp onie-accton_as7700_32x-r0.bin
+  => setenv q1sz.b 0x500000
+  => tftp onie-accton_as7700_32x-r1.bin
   => protect off $q1start +${q1sz.b} && erase $q1start +${q1sz.b}
   => cp.b $fileaddr $q1start ${q1sz.b} && protect on $q1start +${q1sz.b}
 
-Step 3 -- Install image2 (onie-accton_as7700_32x-r0.bin.uboot)
+Step 3 -- Install image2 (onie-accton_as7700_32x-r1.bin.uboot)
 --------------------------------------------------------------
 
 Copying the image down using TFTP and flash to the NOR flash::
 
-  => setenv q2start 0xeff80000
-  => setenv q2sz.b 0x00080000
-  => tftp onie-accton_as7700_32x-r0.bin.uboot
+  => setenv q2start 0xeff40000
+  => setenv q2sz.b 0x000c0000
+  => tftp onie-accton_as7700_32x-r1.bin.uboot
   => protect off $q2start +${q2sz.b} && erase $q2start +${q2sz.b}
   => cp.b $fileaddr $q2start ${q2sz.b} && protect on $q2start +${q2sz.b}
 
