AlphaNetworks platforms: change the vendor name to follow naming conventions
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/alphanetworks/alphanetworks_snx6070_486f/INSTALL
+++ b/machine/alphanetworks/alphanetworks_snx6070_486f/INSTALL
@@ -8,15 +8,15 @@ Cross-Compiling ONIE
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/alpha_networks MACHINE=alpha_networks_snx6070_486f all"``.  For example::
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snx6070_486f all"``.  For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/alpha_networks MACHINE=alpha_networks_snx6070_486f all
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snx6070_486f all
 
 When complete, the ONIE binaries are located in
 ``build/images``::
 
-  -rw-r--r-- 4521984 Sep 30 14:52 onie-alpha_networks_snx6070_486f-r0.bin
+  -rw-r--r-- 4521984 Sep 30 14:52 onie-alphanetworks_snx6070_486f-r0.bin
 
 Installing the ONIE binaries
 ============================
@@ -24,7 +24,7 @@ Installing the ONIE binaries
 A single binary image needs to be installed on the NOR flash.
 
 Image 1 -- ONIE kernel and u-boot.
-  name:  onie-alpha_networks_snx6070_486f-r0.bin
+  name:  onie-alphanetworks_snx6070_486f-r0.bin
 
 Step 1 -- Put the ONIE file on a TFTP server
 ---------------------------------------------
@@ -32,14 +32,14 @@ Step 1 -- Put the ONIE file on a TFTP server
 The following directions assume the files are on the root of the TFTP
 server.
 
-Step 2 -- Install image1 (onie-alpha_networks_snx6070_486f-r0.bin)
+Step 2 -- Install image1 (onie-alphanetworks_snx6070_486f-r0.bin)
 -----------------------------------------------
 
 Copying the image down using TFTP and flash to the NOR flash::
 
   => setenv start 0xefbb0000
   => setenv sz.b 0x450000
-  => tftp $loadaddr onie-alpha_networks_snx6070_486f-r0.bin
+  => tftp $loadaddr onie-alphanetworks_snx6070_486f-r0.bin
   => protect off $start +${sz.b} && erase $start +${sz.b}
   => cp.b $loadaddr $start ${sz.b} && protect on $start +${sz.b}
 
