onlp-platform-defaults : updated
because of missing __onlp_platform_version_default__ in onlp v0.3

--- a/components/any/onlp/onlp-platform-defaults/deb/debuild/debian/changelog
+++ b/components/any/onlp/onlp-platform-defaults/deb/debuild/debian/changelog
@@ -1,3 +1,9 @@
+onlp-platform-defaults (0.3.0bsn1~ubuntu1) unstable; urgency=low
+
+  * Updated ONLP __onlp_platform_version_default__ API
+
+ -- ONL <opennetworklinux@googlegroups.com>  Tue, 04 Nov 2014 21:55:08 -0800
+
 onlp-platform-defaults (0.2.0bsn1~ubuntu1) unstable; urgency=low
 
   * Updated ONLP SFP API
