Centec Networks platform: patch for ONIE self update function
The platforms are including:
    - centec_e580_20q4z
    - centec_e580_48x6q

This patch correct .dts u-boot partition label name and override install_onie_kernel
function,so ONIE self update function can work correctly. And also update INSTALL file
for upgrading U-Boot in the field.

Signed-off-by: Cao Jie <caoj@centecnetworks.com>

--- a/machine/centec/centec_e580_20q4z/INSTALL
+++ b/machine/centec/centec_e580_20q4z/INSTALL
@@ -17,6 +17,7 @@ For example::
 When complete, the ONIE binaries are located in
 ``build/images``::
 
+  -rw-r--r-- 4849664 May  7 12:00 centec_e580_20q4z-r0.u-boot
   -rw-r--r-- 4849664 May  7 12:06 onie-centec_e580_20q4z-r0.bin
 
 Installing the ONIE binaries
@@ -67,3 +68,12 @@ login and look around the ONIE.  To start the rescue mode type this::
   => setenv reboot_cmd rescue
   => boot
 
+Step 6 -- Update uboot image (Optional)
+------------------
+You can interrupt the boot process by pressing any key during the
+count down::
+
+ => tftpboot centec_e580_20q4z-r0.u-boot
+ => protect off bank 1
+ => erase bank 1
+ => cp.b 0x1000000 0xeff80000 0x80000
