--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
@@ -1,3 +1,8 @@
+ofdpa-2.0-closed (0.1.1bsn1~ubuntu1) unstable; urgency=low
+
+  * Added Init script
+
+ -- ONL <opennetworklinux@googlegroups.com>  Sun, 16 May 2015 21:55:08 -0800
 ofdpa-2.0-closed (0.1.0bsn1~ubuntu1) unstable; urgency=low
 
   * Initial closed-source binaries from the OF-DPA ODP distribution
