Added OFDPA support for Accton AA5710

--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
@@ -1,6 +1,12 @@
+ofdpa-2.0-closed (0.1.2bsn1~ubuntu1) unstable; urgency=low
+
+  * Rebuilt brcm-indigo-ofdpa-ofagent
+
+ -- ONL <opennetworklinux@googlegroups.com>  Sun, 16 May 2015 21:55:08 -0800
 ofdpa-2.0-closed (0.1.1bsn1~ubuntu1) unstable; urgency=low
 
   * Added Init script
+  * Added brcm-indigo-ofdpa-ofagent
 
  -- ONL <opennetworklinux@googlegroups.com>  Sun, 16 May 2015 21:55:08 -0800
 ofdpa-2.0-closed (0.1.0bsn1~ubuntu1) unstable; urgency=low
