OFDPA now workingon AS5710

--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
@@ -1,3 +1,15 @@
+ofdpa-2.0-closed (0.1.4bsn1~ubuntu1) unstable; urgency=low
+
+  * In initfile, split kernel options out
+
+ -- ONL <opennetworklinux@googlegroups.com>  Sun, 16 May 2015 21:55:08 -0800
+ofdpa-2.0-closed (0.1.3bsn1~ubuntu1) unstable; urgency=low
+
+  * Added smarter options to init script
+  * Added kernel options for Accton 5710
+  * Added support for 'powerpc-accton-as5710-54x-r0' 
+
+ -- ONL <opennetworklinux@googlegroups.com>  Sun, 16 May 2015 21:55:08 -0800
 ofdpa-2.0-closed (0.1.2bsn1~ubuntu1) unstable; urgency=low
 
   * Rebuilt brcm-indigo-ofdpa-ofagent
