--- a/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/changelog
+++ b/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/changelog
@@ -1,3 +1,8 @@
+indigo-ofdpa-ofagent (0.3.1bsn1~ubuntu1) unstable; urgency=low
+
+  * Do not add ports to of_features_reply in v1.3
+
+ -- ONL <opennetworklinux@googlegroups.com>  Tue, 04 Nov 2014 21:55:08 -0800
 indigo-ofdpa-ofagent (0.3.0bsn1~ubuntu1) unstable; urgency=low
 
   * BUG look for /etc/*onl*_platform
