Fixed ofdpa init script
was loading the wrong kernel modules

--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/changelog
@@ -1,3 +1,8 @@
+ofdpa-2.0-closed (0.1.5bsn1~ubuntu1) unstable; urgency=low
+
+  * Fixed kernel mod loading issue
+
+ -- ONL <opennetworklinux@googlegroups.com>  Sun, 7 Jun 2015 21:55:08 -0800
 ofdpa-2.0-closed (0.1.4bsn1~ubuntu1) unstable; urgency=low
 
   * In initfile, split kernel options out
