kvm_x86_64: updated install instructions
Increase the size of the VM to 1 GB.
Change the image format from raw to qcow2.

--- a/machine/kvm_x86_64/INSTALL
+++ b/machine/kvm_x86_64/INSTALL
@@ -43,11 +43,11 @@ firmware from http://www.tianocore.org/ovmf/ .
 
 To create the VM:
 
-1. Create a 256MB blank disk image to use as the "hard drive" for your VM.
+1. Create a 1 GB blank disk image to use as the "hard drive" for your VM.
    Name the file onie-x86-demo.img, putting it somewhere in your home
    directory::
 
-     $ dd if=/dev/zero of=$HOME/kvm/onie-x86-demo.img bs=1M count=256
+     $ qemu-img create -f qcow2 onie-x86-demo.img 1G
 
 2. edit mk-vm.sh and:
 
