qemu_armv7a: create QEMU disk and flash images
Update the qemu_armv7a machine build to define image post-processing
steps used to create QEMU disk and flash images.

These images are used by machine/qemu_armv7a/launch-qemu.sh when
launching QEMU for the qemu_armv7a machine.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/qemu_armv7a/INSTALL
+++ b/machine/qemu_armv7a/INSTALL
@@ -31,8 +31,18 @@ onie-updater-arm-qemu_armv7a-r0 -- This is the ONIE self-update
 image.  This image is a self-extracting archive used for installing
 ONIE from within ONIE.
 
+Also disk and flash images for QEMU are also produced:
+
+-rw-r--r-- 1  67108864 Sep  3 10:29 onie-qemu_armv7a-r0-nor0.img
+-rw-r--r-- 1  67108864 Sep  3 10:29 onie-qemu_armv7a-r0-nor1.img
+-rw-r--r-- 1 268435456 Sep  3 10:29 onie-qemu_armv7a-r0-sd.img
+
 Creating a New Virtual Machine
 ==============================
+
+This section describes how to bootstrap the virtual machine.  Once
+this step is complete you can use the regular 'onie-self-update'
+method to install a new version of ONIE on the VM.
 
 The ONIE virtual machine for ARM is based on the Versatile VEXPRESS
 CA9X4 machine, which already has support in U-Boot, QEMU and the Linux
@@ -78,6 +88,10 @@ To patch and build qemu-2.4.0:
 Creating NOR flash and SD card images
 -------------------------------------
 
+[ Note: The build process already creates the QEMU disk and flash
+images described in this section for you.  Leaving these instructions
+here for historical reference. ]
+
 With QEMU you can use files from your host system as the backing store
 for the virtual machine's NOR flash and SD card.  In order to do that
 you first have to prepare the image files.
@@ -101,7 +115,7 @@ valid data.  When completed, the contents of onie-nor0.img looks like:
   0x00000000 - 0x0007FFFF: 512K U-Boot Image (2 sectors)
   0x00080000 - 0x000BFFFF: 256K U-Boot Environment (1 sector)
   0x000C0000 - 0x000FFFFF: 256K EEPROM data (1 sector)
-  0x00100000 - 0x005FFFFF: 5MB ONIE kernel + initramfs
+  0x00100000 - 0x006FFFFF: 6MB ONIE kernel + initramfs
 
 3. Copy the ONIE u-boot and ONIE kernel images into the
    ``onie-nor0.img`` file:
@@ -194,7 +208,6 @@ ignored and have no effect:
   of_amba_device_create(): amba_device_add() failed (-19) for /watchdog@100e5000
   of_amba_device_create(): amba_device_add() failed (-19) for /smb/motherboard/iofpga@7,00000000/sysctl@01000
   of_amba_device_create(): amba_device_add() failed (-19) for /smb/motherboard/iofpga@7,00000000/wdt@0f000
-
 
 Supported Features
 ==================
