qemu_armv7a: minor update INSTALL QEMU patching instructions
Minor update to QEMU patching instructions

--- a/machine/qemu_armv7a/INSTALL
+++ b/machine/qemu_armv7a/INSTALL
@@ -71,7 +71,7 @@ To patch and build qemu-2.4.0:
 2. Apply qemu-2.4.0-arm-vexpress-flash.patch or manually edit
    qemu-2.4.0/hw/arm/vexpress.c yourself:
 
-   $ patch -p1 < qemu-2.4.0-arm-vexpress-flash.patch
+   $ patch -p0 < ${ONIE_ROOT}/machine/qemu_armv7a/qemu-2.4.0-arm-vexpress-flash.patch
 
 3. Configure qemu-2.4.0 for arm.
 
