fsl_p2020rdbpca: update the INSTALL instructions
Fix up the INSTALL instructions after moving this machine from
machine/fsl_p2020rdbpca to machine/fsl/fsl_p2020rdbpca.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/fsl/fsl_p2020rdbpca/INSTALL
+++ b/machine/fsl/fsl_p2020rdbpca/INSTALL
@@ -8,10 +8,10 @@ Cross-Compiling ONIE
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINE=fsl_p2020rdbpca all"``.  For example::
+type ``"make MACHINEROOT=../machine/fsl MACHINE=fsl_p2020rdbpca all"``.  For example::
 
   $ cd build-config
-  $ make -j4 MACHINE=fsl_p2020rdbpca all
+  $ make -j4 MACHINEROOT=../machine/fsl MACHINE=fsl_p2020rdbpca all
 
 When complete, the ONIE binaries are located in
 ``build/images``::
@@ -66,6 +66,4 @@ booting press the [Enter] key to active the console.
 Alternatively you can start the system in *rescue* mode so you can
 login and look around the ONIE.  To start the rescue mode type this::
 
-  => setenv reboot_cmd rescue
-  => boot
-
+  => run onie_rescue
