[im_n29xx_t40n] s/niagra/niagara/g
Interface Masters switches product family name is Niagara.

Signed-off-by: Vitaliy Ivanov <vitaliyi@interfacemasters.com>

--- a/machine/imt/im_n29xx_t40n/INSTALL
+++ b/machine/imt/im_n29xx_t40n/INSTALL
@@ -1,6 +1,6 @@
-================================================================================
-Installing ONIE on Interface Masters Niagra 29XX Series, Congatec conga-BAF/T40N
-================================================================================
+=======================================================
+Installing ONIE on Interface Masters Niagara 29XX Series
+=======================================================
 
 Cross-Compiling ONIE
 ====================
@@ -17,6 +17,21 @@ When complete, the ONIE binaries are located in
 ``build/images``::
 
   -rw-r--r-- 4849664 May  7 12:06 onie-im_n29xx_t40n-r0.bin
+
+Note on ONIE id for Interface Masters Niagara 29XX Series
+=========================================================
+
+ONIE machine id 'im_n29xx_t40n' historically includes part for
+Congatec conga-BAF/T40N CPU board. This is left intentionally to
+support backward compatibility with older ONIE versions.
+Now machine id 'im_n29xx_t40n' is used on Interface Masters Niagara
+29xx family devices. More detailed list for supported hardware you
+can find below.
+
+Interface Masters Niagara 29XX Series Supported Hardware
+========================================================
+
+TBW (To Be Written)
 
 Installing the ONIE binaries
 ============================
