wnc_sst1_n1: Add support for ipmitools
Changes to be committed:

  modified: machine/wnc/wnc_sst1_n1/INSTALL
  modified: machine/wnc/wnc_sst1_n1/busybox/patches/onie-syseeprom-rw-wnc.patch
  modified: machine/wnc/wnc_sst1_n1/kernel/config
  modified: machine/wnc/wnc_sst1_n1/machine.make

For build ipmitools, with machine settings. And fix busybox patch
bugs.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/wnc/wnc_sst1_n1/INSTALL
+++ b/machine/wnc/wnc_sst1_n1/INSTALL
@@ -12,7 +12,7 @@ type ``"make MACHINEROOT=../machine/wnc MACHINE=wnc_sst1_n1 all"``.
 For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/wnc MACHINE=wnc_sst1_n1 all
+  $ make -j4 MACHINEROOT=../machine/wnc MACHINE=wnc_sst1_n1 all recovery-iso
 
 When complete, the ONIE binaries are located in
 ``build/images``::
