Update spelling and title case
Correct bound to baud then notice and correct title case.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/intel/intel_coreboot_rangeley/INSTALL
+++ b/machine/intel/intel_coreboot_rangeley/INSTALL
@@ -1,14 +1,14 @@
 ====================================
-Installing ONIE on common rangeley (intel c2000 family) platform with coreboot (BIOS/UEFI replacement)
+Installing ONIE on common Rangeley (Intel c2000 family) platform with Coreboot (BIOS/UEFI replacement)
 ====================================
 
 Prerequisites 
 ====================
 
-1. rangeley (intel c2000 family) platform
+1. Rangeley (Intel c2000 family) platform
 2. Coreboot as primary bootloader (BIOS/UEFI replacement)
-3. Grub2 as coreboot payload
-4. console connection with the same bound rate as your coreboot settings are
+3. Grub2 as Coreboot payload
+4. console connection with the same baud rate as your coreboot settings are
 
 
 Cross-Compiling ONIE
@@ -16,7 +16,7 @@ Cross-Compiling ONIE
 
 Because we are builing grub with coreboot support we have to install additional packages first prior of compiling ONIE.
 Those packages are: `libfreetype6-dev` and `unifont`
-for debian based system you can:
+for Debian based system you can:
 
 # sudo apt-get install libfreetype6-dev unifont
 
