Fix filenames in INSTALL file.

--- a/machine/plexxi/px_switch2/INSTALL
+++ b/machine/plexxi/px_switch2/INSTALL
@@ -16,13 +16,13 @@ type ``"make  MACHINEROOT=../machine/plexxi MACHINE=px_switch2 all"``.  For exam
 When complete, the ONIE binaries are located in
 ``build/images``::
 
--rw-r--r-- 1 3963992 Jan 30 16:38 plexxi-r0.initrd
--rw-r--r-- 1 3091328 Jan 30 10:58 plexxi-r0.vmlinuz
--rw-r--r-- 1 7067253 Jan 30 16:38 onie-updater-x86_64-plexxi-r0
+-rw-r--r-- 1 3963992 Jan 30 16:38 px_switch2-r0.initrd
+-rw-r--r-- 1 3091328 Jan 30 10:58 px_switch2-r0.vmlinuz
+-rw-r--r-- 1 7067253 Jan 30 16:38 onie-updater-x86_64-px_switch2-r0
 
-plexxi-r0.vmlinuz -- This is the ONIE kernel image
-plexxi-r0.initrd  -- This is the ONIE initramfs (filesystem)
-onie-updater-x86_64-plexxi-r0 -- This is the ONIE self-update
+px_switch2-r0.vmlinuz -- This is the ONIE kernel image
+px_switch2-r0.initrd  -- This is the ONIE initramfs (filesystem)
+onie-updater-x86_64-px_switch2-r0 -- This is the ONIE self-update
 image.  This image is a self-extracting archive used for installing
 ONIE.
 
